<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/create_a_new_note"
            android:textColor="#000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/note_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorTextIcons"
            android:hint="@string/enter_note_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/note_date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorTextIcons"
            android:hint="@string/enter_note_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:padding="8dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/note_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorTextIcons"
            android:gravity="start"
            android:hint="@string/what_s_your_note"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/add_note_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:padding="8dp"
            android:text="@string/add_note"
            android:textColor="@color/colorTextIcons"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>